--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @import '~@angular/material/theming';
 @include mat-core();
-$github-app-primary: mat-palette($mat-indigo);
+$github-app-primary: mat-palette($mat-grey, 900, A100, 50, 800);
 $github-app-accent: mat-palette($mat-pink, A200, A100, A400);
 $github-app-warn: mat-palette($mat-red);
 $github-app-theme: mat-light-theme($github-app-primary, $github-app-accent, $github-app-warn);
