--- a/src/app/modules/main/components/search/search.component.html
+++ b/src/app/modules/main/components/search/search.component.html
@@ -1,9 +1,63 @@
-<form [formGroup]="searchForm" (submit)="submitForm(searchForm.value)" class="form" fxLayout="row" fxLayoutGap="25px">
-    <mat-form-field fxFlex="36%" fxFlexOffset="20px" >
-        <input matInput placeholder="Username" formControlName="username">
-        <mat-icon matSuffix>search</mat-icon>
-    </mat-form-field>
-</form>
-<mat-divider></mat-divider>
-<!--<app-list></app-list>-->
-<!--<router-outlet></router-outlet>-->
+<div fxLayout="column">
+
+    <form [formGroup]="searchForm" (submit)="submitForm(searchForm.value)" class="form" fxLayout="row"
+          fxLayoutGap="25px">
+        <mat-form-field fxFlex="36%" fxFlexOffset="20px">
+            <input matInput placeholder="Username" formControlName="username">
+            <mat-icon matSuffix>search</mat-icon>
+        </mat-form-field>
+    </form>
+    <mat-divider></mat-divider>
+
+    <div fxLayout="row" fxLayoutGap="10px" fxFlex="100">
+        <div fxFlex="40">
+            <div *ngIf="(users$ | async) as users">
+                <mat-table *ngIf="users" [dataSource]="users" fxLayoutGap="20px">
+
+                    <ng-container matColumnDef="select">
+                        <mat-header-cell *matHeaderCellDef fxFlex="10"></mat-header-cell>
+                        <mat-cell *matCellDef="let row" fxFlex="10">
+                            <mat-checkbox (click)="$event.stopPropagation()"
+                                          (change)="onChange($event,row)"
+                                          [checked]="selection.isSelected(row)"
+                                          [aria-label]="checkboxLabel(row)">
+                            </mat-checkbox>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="ava">
+                        <mat-header-cell *matHeaderCellDef fxFlex="10">ava</mat-header-cell>
+                        <mat-cell *matCellDef="let element" fxFlex="10">
+                            <img src="{{element.avatar_url}}">
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="login">
+                        <mat-header-cell *matHeaderCellDef fxFlex="30">login</mat-header-cell>
+                        <mat-cell *matCellDef="let element" fxFlex="30">
+                            <span class="ellipsis" title="12345">{{element.login}}</span>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="url">
+                        <mat-header-cell *matHeaderCellDef>url</mat-header-cell>
+                        <mat-cell *matCellDef="let element">
+                            <span class="ellipsis">{{element.html_url}}</span>
+                        </mat-cell>
+                    </ng-container>
+
+                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectRow(row)"></mat-row>
+                </mat-table>
+            </div>
+        </div>
+        <div fxFlex="30">
+            <div *ngIf="selectedUser">
+                <app-search-detail [user]="selectedUser"></app-search-detail>
+            </div>
+        </div>
+        <div fxFlex="30">
+            c
+        </div>
+    </div>
+</div>
