--- a/src/app/modules/main/components/search/search.component.html
+++ b/src/app/modules/main/components/search/search.component.html
@@ -18,8 +18,7 @@
                         <mat-cell *matCellDef="let row" fxFlex="10">
                             <mat-checkbox (click)="$event.stopPropagation()"
                                           (change)="onChange($event,row)"
-                                          [checked]="selection.isSelected(row)"
-                                          [aria-label]="checkboxLabel(row)">
+                                          [checked]="selection.isSelected(row)">
                             </mat-checkbox>
                         </mat-cell>
                     </ng-container>
@@ -52,7 +51,7 @@
                                [pageIndex]="pageIndex"
                                [pageSize]="pageSize"
                                [pageSizeOptions]="[10, 20, 30]"
-                               (page)="getPaginatorData($event)">
+                               (page)="paginatorEvent($event)">
                 </mat-paginator>
             </div>
         </div>
