--- a/src/app/modules/main/components/auth/auth.component.html
+++ b/src/app/modules/main/components/auth/auth.component.html
@@ -1,18 +1,23 @@
-<div fxLayout="column" fxLayoutAlign="center center">
-
-    <h1>Sign in to GitHub</h1>
-    <form [formGroup]="authForm" (submit)="submitForm(authForm.value)" class="form">
-        <div fxLayout='column'>
-
-            <div fxFlex="33">
-                <mat-form-field>
-                    <input matInput placeholder="Username" formControlName="username">
-                </mat-form-field>
-            </div>
-
-            <div fxFlex="33">
-                <button type="submit" mat-raised-button>Sign in</button>
-            </div>
+<div class="auth" fxFlex="100" fxLayout="row" fxLayoutAlign="center center" >
+    <div fxFlex="20" fxLayout="column" fxLayoutGap="20px">
+        <div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+            <div mat-card-avatar class="header-image"></div>
+            <mat-card-title>Sign in to GitHub</mat-card-title>
         </div>
-    </form>
+        <mat-card>
+            <form [formGroup]="authForm" (submit)="submitForm(authForm.value)" class="form">
+                <div fxLayout="column" fxFlex="100" fxLayoutGap="20px">
+                    <mat-form-field>
+                        <mat-label>Username</mat-label>
+                        <input matInput formControlName="username">
+                    </mat-form-field>
+                    <button mat-raised-button
+                            color="accent"
+                            type="submit">Sign in
+                    </button>
+                </div>
+            </form>
+        </mat-card>
+    </div>
 </div>
+
