--- a/src/app/modules/main/components/auth/auth.component.html
+++ b/src/app/modules/main/components/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div class="auth" fxFlex="100" fxLayout="row" fxLayoutAlign="center center" >
+<div class="auth" fxFlex="100" fxLayout="row" fxLayoutAlign="center center">
     <div fxFlex="20" fxLayout="column" fxLayoutGap="20px">
         <div fxFlex="100" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
             <div mat-card-avatar class="header-image"></div>
@@ -10,10 +10,15 @@
                     <mat-form-field>
                         <mat-label>Username</mat-label>
                         <input matInput formControlName="username">
+                        <mat-error
+                                *ngIf="authForm.get('username').touched && authForm.get('username').invalid && authForm.get('username').errors.required">
+                            Please enter the field
+                        </mat-error>
                     </mat-form-field>
                     <button mat-raised-button
                             color="accent"
-                            type="submit">Sign in
+                            type="submit"
+                            [disabled]="authForm.invalid">Sign in
                     </button>
                 </div>
             </form>
