--- a/src/app/modules/main/components/search/search.component.scss
+++ b/src/app/modules/main/components/search/search.component.scss
@@ -1,21 +1,28 @@
-mat-table {
-  width: 100%;
-
-  .ellipsis {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-
-  .ellipsis:hover {
-    overflow: visible;
-    text-overflow: clip;
-    white-space: normal;
-    height: auto;
-  }
-
-  img {
-    width: 30px;
-    height: 30px;
-  }
+.container {
+    height: 50vh;
 }
+
+
+mat-table {
+    width: 100%;
+
+    mat-cell {
+        cursor: pointer;
+    }
+
+    .ellipsis {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+
+    .ellipsis:hover {
+        overflow: visible;
+        text-overflow: clip;
+        white-space: normal;
+        height: auto;
+    }
+
+}
+
+
