--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @import '~@angular/material/theming';
 @include mat-core();
-$github-app-primary: mat-palette($mat-grey, 900, A100, 50, 800);
+$github-app-primary: mat-palette($mat-blue-grey, 900, A100, 50, 800);
 $github-app-accent:  mat-palette($mat-green, 700, 900, A100);
 $github-app-warn: mat-palette($mat-red);
 $github-app-theme: mat-light-theme($github-app-primary, $github-app-accent, $github-app-warn);
@@ -9,3 +9,9 @@ $github-app-theme: mat-light-theme($github-app-primary, $github-app-accent, $git
 /* You can add global styles to this file, and also import other style files */
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.search-avatar {
+    background-size: cover;
+    height: 35px;
+    width: 35px;
+}
