--- a/src/app/modules/main/components/search-detail/search-detail.component.html
+++ b/src/app/modules/main/components/search-detail/search-detail.component.html
@@ -4,18 +4,32 @@
         <mat-card-subtitle>{{user.html_url}}</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="{{user.avatar_url}}" alt="user">
-    <mat-card-content>
-        <div *ngFor="let item of user | keyvalue">
-            <b>{{item.key}}</b>: {{item.value}}
-        </div>
-    </mat-card-content>
+
     <mat-card-actions>
-        <mat-tab-group color="accent" backgroundColor="primary">
-            <mat-tab label="Repos">
-                <pre>{{repos |  async | json}}</pre>
+        <mat-tab-group color="warn" backgroundColor="primary">
+            <mat-tab *ngIf="(repos$ | async) as repos">
+                <ng-template matTabLabel>
+                    <span matBadge="{{repos.length}}" matBadgeOverlap="false" matBadgeColor="warn">Repos</span>
+                </ng-template>
+                <mat-list>
+                    <a mat-list-item *ngFor="let repo of repos"
+                       [href]=repo.html_url>
+                        <mat-icon mat-list-icon>folder_special</mat-icon>
+                        <h4 mat-line>{{repo.name}}</h4>
+                    </a>
+                </mat-list>
             </mat-tab>
-            <mat-tab label="Gists">
-                <pre>{{gists |  async | json}}</pre>
+            <mat-tab *ngIf="(gists$ | async) as gists">
+                <ng-template matTabLabel>
+                    <span matBadge="{{gists.length}}" matBadgeOverlap="false" matBadgeColor="warn">Gists</span>
+                </ng-template>
+                <mat-list>
+                    <a mat-list-item *ngFor="let gist of gists"
+                       [href]=gist.html_url>
+                        <mat-icon mat-list-icon>folder_special</mat-icon>
+                        <h4 mat-line>{{gist.description || '---'}}</h4>
+                    </a>
+                </mat-list>
             </mat-tab>
         </mat-tab-group>
     </mat-card-actions>
