--- a/src/app/modules/main/components/nav-bar/nav-bar.component.html
+++ b/src/app/modules/main/components/nav-bar/nav-bar.component.html
@@ -1,13 +1,13 @@
-<mat-toolbar color="primary" fxLayout="row" fxLayoutAlign="space-between center">
+<mat-toolbar color="primary" fxFlex="100" fxLayout="row" fxLayoutAlign="space-between center">
     <div>
         <a class="logo" matLine routerLink="/search">Git Service</a>
     </div>
     <div>
         <div *ngIf="user">
-            <div fxLayout="row" fxLayoutGap="20px">
+            <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="center center">
                 <a matLine routerLink="/profile" color="warn">{{user.username}}</a>
-                <button matLine color="warn" (click)="logout()">
-                    <mat-icon matSuffix>exit_to_app</mat-icon>
+                <button mat-mini-fab color="warn" (click)="logout()">
+                    <mat-icon>exit_to_app</mat-icon>
                 </button>
             </div>
         </div>
@@ -16,3 +16,5 @@
         </div>
     </div>
 </mat-toolbar>
+
+
