--- a/src/app/modules/main/components/search-checked/search-checked.component.html
+++ b/src/app/modules/main/components/search-checked/search-checked.component.html
@@ -1,22 +1,50 @@
-<mat-card *ngFor="let user of checkedUsers">
-    <mat-card-header>
-        <mat-card-title>{{user.profile.login}}</mat-card-title>
-        <mat-card-subtitle>{{user.profile.html_url}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="{{user.profile.avatar_url}}" alt="user">
-    <mat-card-content>
-        <div *ngFor="let item of user.profile | keyvalue">
-            <b>{{item.key}}</b>: {{item.value}}
-        </div>
-    </mat-card-content>
-    <mat-card-actions>
-        <mat-tab-group color="accent" backgroundColor="primary">
-            <mat-tab label="Repos">
-                <pre>{{user.repos | json}}</pre>
-            </mat-tab>
-            <mat-tab label="Gists">
-                <pre>{{user.gists | json}}</pre>
-            </mat-tab>
-        </mat-tab-group>
-    </mat-card-actions>
-</mat-card>
+<div fxLayout="column" fxLayoutGap="10px">
+    <mat-accordion *ngFor="let user of checkedUsers">
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    <img src="{{user.profile.avatar_url}}" class="search-avatar" alt="user">
+                </mat-panel-title>
+                <mat-panel-description>
+                    {{user.profile.login}}
+                </mat-panel-description>
+            </mat-expansion-panel-header>
+
+            <mat-card-header>
+                <mat-card-title>{{user.profile.login}}</mat-card-title>
+                <mat-card-subtitle>{{user.profile.html_url}}</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="{{user.profile.avatar_url}}" alt="user">
+            <mat-card-actions>
+                <mat-tab-group color="warn" backgroundColor="primary">
+                    <mat-tab *ngIf="user.repos">
+                        <ng-template matTabLabel>
+                            <span matBadge="{{user.repos.length}}" matBadgeOverlap="false"
+                                  matBadgeColor="warn">Repos</span>
+                        </ng-template>
+                        <mat-list>
+                            <a mat-list-item *ngFor="let repo of user.repos"
+                               [href]=repo.html_url>
+                                <mat-icon mat-list-icon>folder_special</mat-icon>
+                                <h4 mat-line>{{repo.name}}</h4>
+                            </a>
+                        </mat-list>
+                    </mat-tab>
+                    <mat-tab *ngIf="user.gists">
+                        <ng-template matTabLabel>
+                            <span matBadge="{{user.gists.length}}" matBadgeOverlap="false"
+                                  matBadgeColor="warn">Gists</span>
+                        </ng-template>
+                        <mat-list>
+                            <a mat-list-item *ngFor="let gist of user.gists"
+                               [href]=gist.html_url>
+                                <mat-icon mat-list-icon>folder_special</mat-icon>
+                                <h4 mat-line>{{gist.description || '---'}}</h4>
+                            </a>
+                        </mat-list>
+                    </mat-tab>
+                </mat-tab-group>
+            </mat-card-actions>
+        </mat-expansion-panel>
+    </mat-accordion>
+</div>
