--- a/src/app/modules/main/components/profile/profile.component.html
+++ b/src/app/modules/main/components/profile/profile.component.html
@@ -1,12 +1,22 @@
-<mat-card *ngIf="(profile$ | async) as profile">
-    <mat-card-header>
-        <div mat-card-avatar><img mat-card-image src="{{profile.avatar_url}}" alt="user"></div>
-        <mat-card-title>{{profile.login}}</mat-card-title>
-        <mat-card-subtitle>{{profile.html_url}}</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-        <p>ID: {{profile.id}}</p>
-        <p>Сreated at: {{profile.created_at | date: 'dd/MM/yyyy'}}</p>
-        <p>Email: {{profile.email }}</p>
-    </mat-card-content>
-</mat-card>
+<div fxFlex="100" fxLayout="column" fxLayoutGap="20px" *ngIf="(profile$ | async) as profile">
+    <mat-card fxFlex="70" fxLayoutGap="20px">
+        <div fxFlex="100" fxLayout="row">
+            <div fxFlex="22">
+                <img style="" src="{{profile.avatar_url}}" alt="User">
+            </div>
+            <div fxFlex="50">
+                <div fxFlex="100" fxLayout="column" fxLayoutAlign="space-between start">
+                    <div>
+                        <mat-card-title>{{profile.login}}</mat-card-title>
+                        <mat-card-subtitle>{{profile.html_url}}</mat-card-subtitle>
+                    </div>
+                    <div>
+                        <p>ID: {{profile.id}}</p>
+                        <p>Сreated at: {{profile.created_at | date: 'dd/MM/yyyy'}}</p>
+                        <p>Email: {{profile.email || '---' }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </mat-card>
+</div>
