--- a/src/app/modules/main/components/search-checked/search-checked.component.scss
+++ b/src/app/modules/main/components/search-checked/search-checked.component.scss
@@ -1,3 +1,7 @@
 .mat-expansion-panel-header-title {
     flex-grow: 0;
 }
+
+.mat-list-base .mat-list-item.mat-list-item-with-avatar {
+    height: 35px;
+}
