--- a/src/app/modules/main/components/search-detail/search-detail.component.html
+++ b/src/app/modules/main/components/search-detail/search-detail.component.html
@@ -1,36 +1,3 @@
 <mat-card>
-    <mat-card-header>
-        <mat-card-title>{{user.login}}</mat-card-title>
-        <mat-card-subtitle>{{user.html_url}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="{{user.avatar_url}}" alt="user">
-
-    <mat-card-actions>
-        <mat-tab-group color="warn" backgroundColor="primary">
-            <mat-tab *ngIf="(repos$ | async) as repos">
-                <ng-template matTabLabel>
-                    <span matBadge="{{repos.length}}" matBadgeOverlap="false" matBadgeColor="warn">Repos</span>
-                </ng-template>
-                <mat-list>
-                    <a mat-list-item *ngFor="let repo of repos; trackBy: trackByFn"
-                       [href]=repo.html_url>
-                        <mat-icon mat-list-icon>folder_special</mat-icon>
-                        <h4 mat-line>{{repo.name}}</h4>
-                    </a>
-                </mat-list>
-            </mat-tab>
-            <mat-tab *ngIf="(gists$ | async) as gists">
-                <ng-template matTabLabel>
-                    <span matBadge="{{gists.length}}" matBadgeOverlap="false" matBadgeColor="warn">Gists</span>
-                </ng-template>
-                <mat-list>
-                    <a mat-list-item *ngFor="let gist of gists"
-                       [href]=gist.html_url>
-                        <mat-icon mat-list-icon>folder_special</mat-icon>
-                        <h4 mat-line>{{gist.description || '---'}}</h4>
-                    </a>
-                </mat-list>
-            </mat-tab>
-        </mat-tab-group>
-    </mat-card-actions>
+    <app-user-detail [user]="user"></app-user-detail>
 </mat-card>
