--- a/src/app/modules/main/components/profile/profile.component.html
+++ b/src/app/modules/main/components/profile/profile.component.html
@@ -12,7 +12,7 @@
                     </div>
                     <div>
                         <p>ID: {{profile.id}}</p>
-                        <p>Created at: {{profile.created_at | date: 'dd/MM/yyyy'}}</p>
+                        <p>Сreated at: {{profile.created_at | date: 'dd/MM/yyyy'}}</p>
                         <p>Email: {{profile.email || '---' }}</p>
                     </div>
                 </div>
