--- a/src/app/modules/main/components/user-detail/user-detail.component.html
+++ b/src/app/modules/main/components/user-detail/user-detail.component.html
@@ -7,7 +7,8 @@
     <p>{{user.bio}}</p>
 </mat-card-content>
 <mat-card-actions>
-    <mat-tab-group #matTabGroup color="warn" backgroundColor="primary" dynamicHeight>
+    <mat-tab-group [ngClass]="{tabsHeight: user.public_repos>0 || user.public_gists>0}" color="warn"
+                   backgroundColor="primary">
         <mat-tab>
             <ng-template matTabLabel>
                 <span matBadge="{{user.public_repos}}" matBadgeOverlap="false" matBadgeColor="warn">Repos</span>
